--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,150 +1,97 @@
-/* .footer {
-  padding: 50px 0px;
-  background: #fde4e4;
-  display: flex;
-  text-align: start;
-  justify-content: center;
-  gap: 8rem;
-  align-items: center;
-}
-
-.footer__logo img {
-  width: calc(100% - 70%);
-  margin-bottom: 1.5rem;
-}
-
-.footer__logo h5 {
-  font-weight: 600;
-  font-size: 1rem;
-  margin-bottom: 15px;
-}
-
-.footer__logo p {
-  font-size: 0.9rem;
-  color: #333;
-  line-height: 29px;
-}
-
-.delivery__time-item {
-  display: flex;
-  margin: 0;
-  gap: 0.7rem;
-  background: transparent !important;
-}
-
-.delivery__time-item span {
-  font-weight: 600;
-  color: #212245;
-  margin: 0;
-}
-
-.delivery__time-item p {
-  color: #212245;
-}
-
-.footer__title {
-  font-size: 1.1rem;
-  color: #212245;
-  font-weight: 600;
-}
-
-@media only screen and (max-width: 768px) {
-  .footer {
-    flex-direction: column;
-    text-align: center;
-    gap: 1rem;
-  }
-
-  .footer__logo img {
-    width: calc(100% - 85%);
-  }
-
-  .footer__title {
-    font-size: 0.9rem;
-  }
-
-  .delivery__time-item span {
-    font-size: 0.8rem;
-  }
-
-  .delivery__time-item p {
-    font-size: 0.7rem;
-    margin-bottom: 0;
-  }
-} */
 .footer {
-  padding: 50px 0px;
-  background: #f6f6f6;
-  display: flex;
-  text-align: start;
-  justify-content: center;
-  gap: 8rem;
-  align-items: center;
-  margin-top: auto; /* Très important pour sticky */
+  padding: 50px 0 20px;
+  background-color: #fde4e4;
+  color: #212245;
 }
 
 .footer__logo img {
-  width: calc(100% - 70%);
-  margin-bottom: 1.5rem;
+  width: 60px;
+  margin-bottom: 10px;
 }
 
 .footer__logo h5 {
   font-weight: 600;
-  font-size: 1rem;
+  font-size: 1.2rem;
   margin-bottom: 15px;
 }
 
-.footer__logo p {
-  font-size: 0.9rem;
-  color: #333;
-  line-height: 29px;
-}
-
-.delivery__time-item {
-  display: flex;
-  margin: 0;
-  gap: 0.7rem;
-  background: transparent !important;
-}
-
-.delivery__time-item span {
-  font-weight: 600;
-  color: #212245;
-  margin: 0;
-}
-
-.delivery__time-item p {
-  color: #212245;
-}
-
 .footer__title {
-  font-size: 1.1rem;
-  color: #212245;
   font-weight: 600;
+  font-size: 1.1rem;
+  margin-bottom: 20px;
 }
 
-/* Responsive */
-@media only screen and (max-width: 768px) {
-  .footer {
-    flex-direction: column;
+.delivery__time-item,
+.contact__item {
+  background: transparent;
+  padding: 10px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.delivery__time-item span,
+.contact__item span {
+  font-weight: 600;
+  font-size: 0.9rem;
+  color: #212245;
+}
+
+.delivery__time-item p,
+.contact__item p {
+  margin-bottom: 0;
+  font-size: 0.9rem;
+  color: #212245;
+}
+
+.newsletter input {
+  padding: 7px 15px;
+  border: 1px solid #df2020;
+  border-radius: 4px;
+  margin-right: 5px;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.newsletter .btn {
+  background: #df2020;
+  color: #fff;
+  border: none;
+  padding: 7px 25px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.social__links span {
+  cursor: pointer;
+}
+
+.social__links span:hover {
+  color: #df2020;
+}
+
+.copyright {
+  font-size: 0.9rem;
+  color: #6f6e6e;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  padding-top: 20px;
+}
+
+@media (max-width: 992px) {
+  .footer__logo {
     text-align: center;
-    gap: 1rem;
   }
-
-  .footer__logo img {
-    width: calc(100% - 85%);
+  
+  .newsletter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
-
-  .footer__title {
-    font-size: 0.9rem;
+  
+  .newsletter input {
+    margin-bottom: 10px;
   }
-
-  .delivery__time-item span {
-    font-size: 0.8rem;
-  }
-
-  .delivery__time-item p {
-    font-size: 0.7rem;
-    margin-bottom: 0;
+  
+  .social__links {
+    display: flex;
+    justify-content: center;
   }
 }
