--- a/src/styles/cart-item.css
+++ b/src/styles/cart-item.css
@@ -1,4 +1,4 @@
-.cart__item-info img {
+/* .cart__item-info img {
   width: 35px;
   height: 35px;
   object-fit: cover;
@@ -46,6 +46,118 @@
 }
 
 @media only screen and (max-width: 576px) {
+  .delete__btn {
+    font-size: 1rem;
+  }
+} */
+.cart__item-info {
+  display: flex;
+  gap: 16px;
+  align-items: center;
+}
+
+.cart__item-img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.cart__item:hover {
+  background-color: rgba(230, 230, 230, 0.994);
+  cursor: pointer;
+  transform: scale(1.02);
+  transition: transform 0.2s ease-in-out;
+}
+
+.cart__product-title {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 8px;
+}
+
+.cart__product-price {
+  font-size: 1rem;
+  color: #FF5733;
+}
+
+.cart__product-price span {
+  font-weight: 600;
+  font-size: 1.1rem;
+}
+
+.extra-ingredients {
+  margin-top: 5px;
+}
+
+.extra-ingredient {
+  font-size: 0.9rem;
+  color: #777;
+}
+
+.increase__decrease-btn {
+  background: #f4f4f4;
+  padding: 4px 10px;
+  border-radius: 5px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.increase__btn,
+.decrease__btn {
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #333;
+}
+
+.quantity {
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #212245;
+}
+
+.delete__btn {
+  font-size: 1.3rem;
+  color: #ff5733;
+  cursor: pointer;
+  transition: color 0.2s ease-in-out;
+}
+
+.delete__btn:hover {
+  color: #d04c29;
+}
+
+.cart__item {
+  margin-bottom: 20px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border-bottom: 1px solid #e0e0e0;
+  transition: transform 0.2s ease;
+}
+
+.cart__item .cart__controls {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+@media only screen and (max-width: 576px) {
+  .cart__item-info {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .cart__product-title {
+    font-size: 0.9rem;
+  }
+
+  .cart__product-price {
+    font-size: 0.9rem;
+  }
+
   .delete__btn {
     font-size: 1rem;
   }
